@@ -1,5 +1,9 @@
 2001-10-02  Darin Adler  <darin@bentspoon.com>
 
+	* autogen.sh: Complete intltool support.
+
+2001-10-02  Darin Adler  <darin@bentspoon.com>
+
 	* autogen.sh: Add intltool support.
 
 2001-09-16  Eskil Heyn Olsen  <eskil@eskil.dk>
